# paranoia-botnet

./: .gitignore  README.md  main.py  pyproject.toml
addons/: converter_pyrogram.py  converter_telethon.py  get_me.py  reinitilize.py  send_message.py
src/: __init__.py
src/base/: __init__.py  hydrogram.py  pyrogram.py  telethon.py
src/enums/: __init__.py
src/generators/: __init__.py  converter.py  telegram_desktop.py
src/models/: session.py
src/storages/: __init__.py  addon_storage.py  session_storage.py  setting_storage.py
storage/: settings.json
